--- a/weapp/templates/base_v2.html
+++ b/weapp/templates/base_v2.html
@@ -41,6 +41,9 @@
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/mass_message.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/new_weixin_message.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/auth.css">
+
+		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/apps.css">
+		
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/weixin_template_message.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/weixin_fun_date.css">
 		<link type="text/css" rel="stylesheet" media="all" href="/static_v2/css/direct_follow.css">
@@ -121,12 +124,6 @@
 			<script type="text/javascript" src="/static/js/all.js"></script>
 		{% endif %}
 		<!-- *finish js* [do not modify and delete this line, it will be needed by dist process] -->
-
-		<!-- handlebar component start -->
-		<script type="text/x-handlebar-template" id="componentTemplates">
-		{{ handlebar_component_template|safe }}
-		</script>
-		<!-- handlebar component end -->
 
 		<script type="text/javascript" src="/resource_js/"></script>
 		{% block base_js %}{% endblock %}
