--- a/weapp/termite2/templates/termite2/wepage_design_page.html
+++ b/weapp/termite2/templates/termite2/wepage_design_page.html
@@ -1,12 +1,13 @@
 {% load workbench_filter %}
 <!DOCTYPE html>
-<html style="background-color: #F5F5F5;">
+<html class="notweixin" style="background-color: #F5F5F5;">
 	<head>
 		<meta charset="UTF-8" />
 		<title></title>
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/base.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/webapp_default.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/widget.css">
+		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/app_widget.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/v4/css/idangerous.swiper.css">
 		<link type="text/css" rel="stylesheet" href="/termite_static/css/design.css">
 
