--- a/weapp/termite2/templates/termite2/workbench.html
+++ b/weapp/termite2/templates/termite2/workbench.html
@@ -50,6 +50,12 @@
 
 {% block base_js %}
   {% include 'wepage_components.html' %}
+  <!-- handlebar component start -->
+  <script type="text/x-handlebar-template" id="componentTemplates">
+    {{ 'wepage'|load_wepage_components_handlebar_templates }}
+  </script>
+  <!-- handlebar component end -->
+  
   <!-- start of ueditor -->
   <script type="text/javascript">
    window.UEDITOR_HOME_URL = '/static/ueditor-1.2.6.1/'
