修复三方账号授权

--- a/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
+++ b/weapp/mall/templates/mall/editor/promotion/create_coupon_rule.html
@@ -37,6 +37,7 @@
         <div class="errorHint" style="margin-left:210px;"></div>
       </div>
     </div>
+    {% comment "隐藏优惠券规则会员等级限制" %}
     <div class="form-group h40">
       <label class="control-label col-sm-2 col-sm-offset-1 star_show pt0 w110 ">会员限制：</label>
       <div class="controls xui-i-item">
@@ -50,6 +51,7 @@
         <div class="errorHint"></div>
       </div>
     </div>
+    {% endcomment %}
     <div class="form-group  h40">
       <label class="control-label col-sm-2 col-sm-offset-1 star_show pt0 w110">每人限领：</label>
       <div class="controls xui-i-item">
