--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
@@ -77,7 +77,7 @@
                         xa-promotion-{{product_group.promotion_type}}
                         xt-productGroup
                         xa-productGroup
-                        {% if product_group.integral_sale_rule %}
+                        {% if product_group.promotion_type = 'integral_sale' %}
                         xa-has-integral-sale-rule
                         {% endif %}
                     "
@@ -175,7 +175,7 @@
                         </li>
                         {% endif %}
 
-                        {% if product_group.integral_sale_rule %}
+                        {% if product_group.promotion_type = 'integral_sale' %}
                         <li class="xui-promotion-section em85 xt-promotion">
                             <input
                                 type='checkbox'
