--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/edit_order.html
@@ -623,6 +623,7 @@ if (/ipad|iphone|mac/i.test(navigator.userAgent)){
 
 var isOrderFromShoppingCart = {% if is_order_from_shopping_cart %}true{% else %}false{% endif %};
 
+var test_view;
 $(document).ready(function() {
     //绑定初始化数据
     _.delay(function() {
@@ -637,6 +638,7 @@ $(document).ready(function() {
             productGroups: productGroups,
             isOrderFromShoppingCart: isOrderFromShoppingCart
         });
+        test_view = view;
     }, 100);
 });
 
