[update]任务 3879 订单部分增加领红包提示样式；需求 3825  修改评价列表样式

--- a/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
+++ b/weapp/webapp/modules/mall/templates/webapp/default_v3/order_detail.html
@@ -111,6 +111,11 @@
         </div>
     </fieldset>
     <!-- 订单商品列表 -->
+    <!-- 订单领红包提示 -->
+    <fieldset class="xui-section clearfix" style="padding:9px 12px;">
+        <!-- <a href="#" class="xui-toGetRedBtn fr">未领取的红包</a> -->
+        <a href="#" class="xui-gotRedBtn fr">最近一次领取的红包</a>
+    </fieldset>
     <!--支付方式及发票-->
     <fieldset class="xui-section xui-section-title">
         <div class="xui-inner clearfix">
