--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -1612,9 +1612,13 @@ input.ui-input-text, textarea.ui-input-text {
 .xui-reviewAllPage .xui-user{
     box-shadow: 0 0 0 1px rgba(227,227,227,.5);
     border-radius: 50%;
-    width: 20px;
-    height: 20px;
+    width: 25px;
+    height: 25px;
     vertical-align: middle;
+    background: url(/static/img/user-1.jpg) no-repeat;
+    background-size: cover;
+    overflow: hidden;
+    display: inline-block;
 }
 .xui-reviewAllPage .xui-reviewImg img{
     float: left;
@@ -3318,7 +3322,7 @@ input.ui-input-text, textarea.ui-input-text {
 .xui-orderListPage .wui-swiper-slide li:first-child{
     margin-top: 0;
 }
-/*.xui-orderListPage .xui-getRedTip{
+.xui-orderListPage .xui-getRedTip{
     display: inline-block;
     width: 14px;
     height: 15px;
@@ -3326,7 +3330,7 @@ input.ui-input-text, textarea.ui-input-text {
     background-size: cover;
     vertical-align: middle;
     margin: -3px auto 0 6px;
-}*/
+}
 
 
 
@@ -3670,7 +3674,7 @@ position: absolute;
 .xui-payOrderPage .xui-priceItem p:not(:first-child) {
     margin-top: 5px;
 }
-/*.xui-payOrderPage .xui-toGetRedBtn,
+.xui-payOrderPage .xui-toGetRedBtn,
 .xui-payOrderPage .xui-gotRedBtn{
     display: inline-block;
     border-radius: 2px;
@@ -3688,7 +3692,7 @@ position: absolute;
     border:1px solid #cf0404;
     -webkit-box-sizing:border-box;
     box-sizing:border-box;
-}*/
+}
 .xui-expressPage{
     background-image:-webkit-linear-gradient(left, #f0f0f0 21px, #e0e0e0 21px, #e0e0e0 24px, #f0f0f0 24px);
     background-image:-o-linear-gradient(left, #f0f0f0 21px, #e0e0e0 21px, #e0e0e0 24px, #f0f0f0 24px);
