[update]会员等级样式；删除商品详情页因改版遗留的无用样式代码

--- a/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
+++ b/weapp/webapp/modules/static/backend_default_v3/css/default_v3.css
@@ -1246,7 +1246,7 @@ input.ui-input-text, textarea.ui-input-text {
     padding-top:1px;
 }
 /*会员价标签*/
-/*.xui-productDetailPage .xui-memberPriceTag{
+.xui-productDetailPage .xui-memberPriceTag{
     min-width: 2.8rem;
     vertical-align: inherit;
 }
@@ -1257,7 +1257,7 @@ input.ui-input-text, textarea.ui-input-text {
     margin-left: 5px;
     -webkit-transform:scale(.95);
     transform:scale(.95);
-}*/
+}
 
 
 /*.xui-productDetailPage .xui-promotion-gift li{
